<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFCFC"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="591dp"
        android:background="@mipmap/ic1_background_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="194dp"
        android:layout_height="33dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="52dp"
        android:text="@string/tv1"
        android:textColor="#F2F6F7"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="269dp"
        android:layout_height="42dp"
        android:layout_marginBottom="340dp"
        android:background="#A0281F"
        android:onClick="Siguiente"
        android:text="@string/BotonSiguiente"
        android:textColor="#F2F6F7"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="31dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginBottom="260dp"
        android:background="#70A7D3"
        android:onClick="Tramite"
        android:text="@string/BotonSiguiente2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="31dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginBottom="188dp"
        android:background="#CDDC39"
        android:text="@string/BotonSiguiente3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="31dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="202dp"
        android:layout_height="37dp"
        android:layout_marginBottom="120dp"
        android:background="#FFC107"
        android:text="@string/BotonSiguiente4"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="34dp" />


</androidx.constraintlayout.widget.ConstraintLayout>