<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main5Activity"
    tools:showIn="@layout/activity_main5">



    <TextView
        android:layout_width="328dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="60dp"
        android:text="@string/tv1"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="60dp"
        android:background="#49A8F1"
        android:textColor="#FFFFFF"
        android:onClick="Siguiente"
        android:text="@string/BotonSiguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="65dp"
        android:background="#49A8F1"
        android:textColor="#FFFFFF"
        android:onClick="Tramite"
        android:text="@string/BotonSiguiente2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="70dp"
        android:background="#49A8F1"
        android:textColor="#FFFFFF"
        android:text="@string/BotonSiguiente3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="75dp"
        android:background="#49A8F1"
        android:textColor="#FFFFFF"
        android:text="@string/BotonSiguiente4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>