<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".f1"
    tools:layout_editor_absoluteY="55dp">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:text="@string/tv2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F6F7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:inputType="textMultiLine"
        android:text="@string/tva"
        android:textColor="#F2F6F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        android:text="@string/tvi1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F6F7"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="390dp"
        android:layout_height="95dp"
        android:layout_marginTop="230dp"
        android:text="@string/tvi2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F6F7"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="390dp"
        android:layout_height="95dp"
        android:layout_marginTop="320dp"
        android:text="@string/tvi3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F6F7"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>