<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main3Activity"
    tools:showIn="@layout/activity_main3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="42dp"
        android:text="@string/tv3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="33dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="Anterior"
        android:text="@string/tv2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="44dp" />

    <ListView
        android:id="@+id/tvv1"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvi1"
        android:layout_width="355dp"
        android:layout_height="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tvi1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/tvv1"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="28dp" />
</androidx.constraintlayout.widget.ConstraintLayout>